--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ tasks:
     flutter update-packages --force-upgrade &&
     flutter run -d web-server --no-resident # prebuilds the app
   command: >
-    flutter run -d web-server --web-port=8080 --web-hostname=0.0.0.0
+    flutter run -d web-server --web-hostname localhost --web-port 3000
 ports:
-- port: 8080
+- port: 3000
   onOpen: open-preview
